--- a/index.html
+++ b/index.html
@@ -851,8 +851,12 @@
   <script src="https://unpkg.com/d3-graphviz@3.0.5/build/d3-graphviz.js"></script>
 
   <!-- SCRIPTS DE ESTRUCTURAS --> 
-  <script src="Backend/Scripts/Peliculas.js"></script>
+  <script src="Backend/Scripts/SHA256.js"></script>
   <script src="Backend/Scripts/Clientes.js"></script>
+  <script src="Backend/Scripts/Categorias.js"></script>
+  
+  <script src="Backend/Scripts/Peliculas.js"></script>
+  <script src="Backend/Scripts/Actores.js"></script>
   <script src="Backend/Scripts/Cargas.js"></script>
   
 
