--- a/Backend/Estructuras/ÁRBOL MERKLE/index.html
+++ b/Backend/Estructuras/ÁRBOL MERKLE/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <title>Merkle Tree</title>
-
+<script type="text/javascript" src="vis-network.min.js"></script>
 <script type="text/javascript" src="Merkle.js"></script>
 
 </head>
@@ -12,6 +12,7 @@
     // create a network
     var container = document.getElementById("mynetwork");
 	var DOTstring = merkle()
+    
 	var parsedData = vis.parseDOTNetwork(DOTstring);
 	var data = {
 	    nodes: parsedData.nodes,
